# transf-arch-from-scratch

./: .gitignore  README.md  common_sense.txt  copied_code.py  pyproject.toml  requirements.txt  train_custom_transformer.py
src/: main.py
src/attention/: grouped_query_attention.py
src/downloader/: processor.py
src/loader/: processor.py
src/models/: processor.py
src/moe/: MoeLayer.py
src/pos_encoder/: rope_encoder.py
src/rmsnorm/: decoder.py
src/tokenizer/: gutenberg_tokenizer.json  processor.py
src/transf_scratch/: __init__.py  __main__.py  data.py  sample_model.py  train_custom_transformer.py  trainer.py
src/transf_scratch/models/: __init__.py  modules.py  tokenizer.py  transformer.py
